--- a/Social/post/templates/post/post-details.html
+++ b/Social/post/templates/post/post-details.html
@@ -11,13 +11,13 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                     {% comment %} <img src="{% static 'images/profile-13.jpg'%}"> {% endcomment %}
-                                     <img
-                                        src="{{post.user.profile.image.url}}"
-                                        />
+                                    <a href = "{% url 'profile' post.user.profile.user %}">
+                                     <img src="{{post.user.profile.image.url}}"/>
+                                
                                 </div>
                                 <div class="ingo">
                                     <h3>{{post.user.username}}</h3>
+                                </a>
                                     <small>{{post.posted|date:"d M Y"}}</small>
                                 </div>
                             </div>
