--- a/Social/userauths/templates/userauths/profile.html
+++ b/Social/userauths/templates/userauths/profile.html
@@ -69,9 +69,11 @@
           <div class="nav">
             <ul>
               <li><a href="{% url 'profile' profile.user %}">Posts</a></li>
+              {% if profile.user == request.user%}
               <li>
                 <a href="{% url 'profilefavourite' profile.user %}">Saved</a>
               </li>
+              {%endif%}
             </ul> <br>
           {% if profile.user != request.user %}
           <label class = "btn btn-primary" > Message </label>
