--- a/Social/comment/templates/comment/comment.html
+++ b/Social/comment/templates/comment/comment.html
@@ -5,10 +5,20 @@
         {% else %}
             <span class="text-gray-500">no author</span>
         {% endif %}
-        
     </div>
+    
     <div class="message-body">
         <h5>{{ comment.author.profile.first_name }} {{ comment.author.profile.last_name }}</h5>
         <p class="text-muted">{{ comment.body }}</p>
+        
+         <div class="button-container">
+            <button class="like-button">Like</button>
+            {%  if user.is_authenticated and comment.author == user %} 
+                 <form action="{% url 'comment-delete' comment.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this comment?');">
+                    {% csrf_token %}
+                    <button type="submit">Delete</button>
+                </form> 
+            {%endif%} 
+        </div> 
     </div>
 </div>
