--- a/Social/comment/templates/comment/comment.html
+++ b/Social/comment/templates/comment/comment.html
@@ -1,7 +1,9 @@
 <div class="message">
     <div class="profile-photo">
         {% if comment.author %}
-            <img src="{{ comment.author.profile.image.url }}" alt="{{ comment.author.profile.first_name }} {{ comment.author.profile.last_name }}" />
+        <a href = "{% url 'profile' comment.author.profile.user %}">
+            <img src="{{ comment.author.profile.image.url }}" 
+            alt="{{ comment.author.profile.first_name }} {{ comment.author.profile.last_name }}" />
         {% else %}
             <span class="text-gray-500">no author</span>
         {% endif %}
@@ -9,16 +11,52 @@
     
     <div class="message-body">
         <h5>{{ comment.author.profile.first_name }} {{ comment.author.profile.last_name }}</h5>
+    </a>
         <p class="text-muted">{{ comment.body }}</p>
         
-         <div class="button-container">
-            <button class="like-button">Like</button>
+        <div class="button-container">
+            <button  role="button"> Like</button>
             {%  if user.is_authenticated and comment.author == user %} 
                  <form action="{% url 'comment-delete' comment.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this comment?');">
                     {% csrf_token %}
-                    <button type="submit">Delete</button>
+                    <button  type="submit" style="margin-left:5px;">Delete</button>
                 </form> 
-            {%endif%} 
+            {%endif%}
+
+            {%if comment.replies.count > 0 %}
+                <button class="reply-button" onclick="toggleReplyForm(this)" style="margin-left:50px;">Replies  {{ comment.replies.count }}</button> 
+            {%else%}
+            <button class="reply-button" onclick="toggleReplyForm(this)" style="margin-left:70px;">Add Reply</button> 
+            {%endif%}
+
+        </div>
+        <div class="reply-form" style="display: none;">
+            {% for reply in comment.replies.all%}
+            {% include 'comment/reply.html' %}
+            {%endfor%}
+
+            <div class="card !pb-0 -mt-3">
+                <form method="POST" action="{% url 'reply-sent' comment.id %}">
+                    <div class="search-bar">
+                        {% csrf_token %}
+                        {{replyform}}
+                    </div>
+                    <button @click="open = false" class="btn btn-primary" type="submit">Reply</button>
+                </form>
+            </div>
+        </div>
+        
+        <script>
+            function toggleReplyForm(button) {
+                const replyForm = button.closest('.button-container').nextElementSibling;
+                replyForm.style.display = replyForm.style.display === 'none' ? 'block' : 'none';
+            }
+        </script>
         </div> 
-    </div>
+
+        {% comment %} <div x-show="repliesOpen" x-cloak class="basis-full mt-3 pl-8 grid grid-cols-1">
+            {% for reply in comment.replies.all%}
+            {% include 'comment/reply.html' %}
+            {%endfor%}
+        </div> {% endcomment %}
 </div>
