Redesigning like-post functionality

--- a/Social/templates/base.html
+++ b/Social/templates/base.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href= "{% static '/style.css' %}" >
+    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <!-- The javascricpt file has been loaded just before the body ends or it will give DOM error -->
 </head>
 <body>
