--- a/Social/comment/templates/comment/comment.html
+++ b/Social/comment/templates/comment/comment.html
@@ -14,12 +14,17 @@
     </a>
         <p class="text-muted">{{ comment.body }}</p>
         
-        <div class="button-container">
-            <button  role="button"> Like</button>
+        <div class="button-container" style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+
+            {%include 'snippets/comment_like.html' %}
+
             {%  if user.is_authenticated and comment.author == user %} 
                  <form action="{% url 'comment-delete' comment.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this comment?');">
                     {% csrf_token %}
-                    <button  type="submit" style="margin-left:5px;">Delete</button>
+                    <button type="submit" >
+                        <i class="uil uil-trash-alt"  style="font-size: 16px;margin-left:10px;"> </i>
+                    </button>
+                    
                 </form> 
             {%endif%}
 
@@ -54,9 +59,5 @@
         </script>
         </div> 
 
-        {% comment %} <div x-show="repliesOpen" x-cloak class="basis-full mt-3 pl-8 grid grid-cols-1">
-            {% for reply in comment.replies.all%}
-            {% include 'comment/reply.html' %}
-            {%endfor%}
-        </div> {% endcomment %}
+       
 </div>
