--- a/Social/comment/templates/comment/reply.html
+++ b/Social/comment/templates/comment/reply.html
@@ -13,11 +13,15 @@
     </a>
         <p class="text-muted">{{ reply.body }}</p>
           <div class="button-container">
-            <button class="like-button">Like</button>
+
+            {%include 'snippets/reply_like.html' %}
+
             {%  if user.is_authenticated and reply.author == user %} 
                  <form action="{% url 'reply-delete' reply.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this reply?');">
                     {% csrf_token %}
-                    <button type="submit">Delete</button>
+                    <button type="submit" >
+                        <i class="uil uil-trash-alt"  style="font-size: 16px;margin-left:5px;">  </i>
+                    </button>
                 </form> 
             {%endif%} 
         </div>  
