--- a/Social/post/templates/post/post-details.html
+++ b/Social/post/templates/post/post-details.html
@@ -1,4 +1,4 @@
- {%extends 'base.html'%}
+ {%extends 'layouts/a.html'%}
 {%load static%}
     {%block content%} 
             {% comment %} *****************Middle************************* {% endcomment %}
