--- a/Social/templates/base.html
+++ b/Social/templates/base.html
@@ -10,198 +10,18 @@
     <link rel="stylesheet" href= "{% static '/style.css' %}" >
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <script src= "{% static 'post/js/actionbuttons.js' %}" ></script>
+    {% block extra_css %}{% endblock %}
     <!-- The javascricpt file has been loaded just before the body ends or it will give DOM error -->
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <h2 class="log">
-                <a href = "{% url 'home' %}">
-                Social
-                </a>
-            </h2>
-            <!-- <div class="search-bar">
-                <i class="uil uil-search"></i>
-                <input type="search" placeholder="Search for user">
-            </div> -->
-            <div class="create">
-                <a href="{% url 'newpost' %}" class="btn btn-primary" role="button">
-                    Create 
-                </a>
-                <a href="{% url 'account_logout' %}" class="btn btn-primary" role="button">
-                    Log Out 
-                </a>
-                <div class="profile-photo" >
-                    <a href = "{% url 'profile' request.user.profile.user %}">
-                    <img src="{{request.user.profile.image.url}}"/>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    {%include 'snippets/header.html'%}
 
     <!------------------------Main-------------------------->
-    <main>
-        <div class="container">
-            <!--*****************Left*************************-->
-            <div class="left">
-                <a  class="profile" href = "{% url 'profile' request.user.profile.user %}">
-                    <div class="profile-photo">
-                            <img src="{{request.user.profile.image.url}}"/>
-                    </div>
-                    <div class="handle">
-                        <h4>{{ request.user.profile.first_name }} {{ request.user.profile.last_name }}</h4>
-                        <p class="text-muted">
-                            @{{request.user.profile.user.username }}
-                        </p>
-                    </div>
-                </a>
+    <main> 
+            {% block layout%}
+            {%endblock%}
 
-                <!--*****************Sidebar*************************-->
-                <div class="sidebar">
-                    <a  class="menu-item active"  href = "{% url 'home' %}">
-                        <span><i class="uil uil-home"></i></span><h3>Home</h3>
-                    </a>
-                    <a  class="menu-item">
-                        <span><i class="uil uil-search"></i></span><h3>Search</h3>
-                    </a>
-                    <a  class="menu-item">
-                        <span><i class="uil uil-compass"></i></span><h3>Explore</h3>
-                    </a>
-                    <a  class="menu-item" id="notifications">
-                        <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span><h3>Notifications</h3>
-                        <!-----Notification Popup-->
-                        <div class="notification-popup">
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="{% static '/images/profile-2.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> accepted your friend request
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-3.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> commented on your post
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-4.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> accepted your friend request
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-5.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> accepted your friend request
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-2.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> accepted your friend request
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-6.jpg'%}" >
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Ben</b> accepted your friend request
-                                    <small class="text-muted">2 DAYS AGO</small>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a  class="menu-item " id="messages-notification">
-                        <span><i class="uil uil-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3>
-                    </a>
-                    <a  class="menu-item " href="{% url 'profilefavourite' request.user.profile.user %}">
-                        <span><i class="uil uil-bookmark"></i></span><h3>Bookmarks</h3>
-                    </a>
-                    <a  class="menu-item " id="theme">
-                        <span><i class="uil uil-palette"></i></span><h3>Theme</h3>
-                    </a>
-                    <a  class="menu-item ">
-                        <span><i class="uil uil-setting"></i></span><h3>Settings</h3>
-                    </a>
-                </div>
-                <!-------------------Button---------------->
-                <a href="{% url 'newpost' %}" class="btn btn-primary" role="button">
-                    Create Post
-                </a>
-            </div>
-            <!---- ====================End of left=============================-->
-            {% block content%}
-
-            {%endblock content%}
-        </div>
     </main>
-
-   <!--=======================================THEME CUSTOMIZATION========================--> 
-   <div class="customize-theme">
-    <div class="card">
-        <h2>Customize your view</h2>
-        <p class="text-muted">Manage your font size,color and background.</p>
-
-        <!--------------------FONT SIZES-------------->
-        <div class="font-size">
-            <h4>Font Size</h4>
-            <div>
-                <h6>Aa</h6>
-                <div class="choose-size">
-                    <span class="font-size-1"></span>
-                    <span class="font-size-2"></span>
-                    <span class="font-size-3"></span>
-                    <span class="font-size-4"></span>
-                    <span class="font-size-5"></span>
-                </div>
-                <h3>Aa</h3>
-            </div>
-        </div>
-
-        <!-------------------PRIMARY COLORS-------------->
-        <div class="color">
-            <h4>Color</h4>
-            <div class="choose-color">
-                <span class="color-1 active"></span>
-                <span class="color-2 "></span>
-                <span class="color-3"></span>
-                <span class="color-4"></span>
-                <span class="color-5"></span>
-            </div>
-         </div>
-
-         <!--------------------BACKGROUND COLOR------------------>
-         <div class="background">
-            <h4>Background</h4>
-            <div class="choose-bg active">
-                <div class="bg-1">
-                    <span></span>
-                    <h5 for="bg-1">Light</h5>
-                </div>
-                <div class="bg-2">
-                    <span></span>
-                    <h5>Dim</h5>
-                </div>
-                <div class="bg-3">
-                    <span></span>
-                    <h5 for="bg-3">Light Out</h5>
-                </div>
-            </div>
-         </div>
-    </div>
-   </div>
 
 <script src= "{% static './index.js' %}" ></script>
 </body>
