--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -1,47 +1,10 @@
-{%extends 'base.html'%}
+{%extends 'layouts/a.html'%}
 {% load static %}
         {% block content %}
             <!--*****************Middle*************************-->
             <div class="middle">
                 <!-------------------Stories---------------->
-                <div class="stories">
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-8.jpg'%}" >
-                        </div>
-                        <p class="name">Your Story</p>
-                    </div>
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-12.jpg'%}" >
-                        </div>
-                        <p class="name">Jane Doe</p>
-                    </div>
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-9.jpg'%}" >
-                        </div>
-                        <p class="name">Jack Wills</p>
-                    </div>
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-15.jpg'%}" >
-                        </div>
-                        <p class="name">Brook Stone</p>
-                    </div>
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-10.jpg'%}" >
-                        </div>
-                        <p class="name">Tina Bale</p>
-                    </div>
-                    <div class="story">
-                        <div class="profile-photo">
-                            <img src="{% static '/images/profile-11.jpg'%}" >
-                        </div>
-                        <p class="name">Smith Mark</p>
-                    </div>
-                </div>
+                 {%include 'snippets/stories.html'%}
                 <!------------------End of Stories---------------------->
                 <form class="create-post">
                     <div class="profile-photo">
@@ -53,11 +16,9 @@
 
                 <!-------------------------FEEDS-------------------------->
                 <div class="feeds">
-                   
                     {% for post in post_items %}
                         {%include 'post/post.html' %}
                     {% endfor %}                  
-                    
                 </div>
                 <!----------------End of FEEDS------------>
             </div>
@@ -224,4 +185,58 @@
                 </div>
             </div>   
             <!--===========================END OF RIGHT====================-->
+            <!--=======================================THEME CUSTOMIZATION========================--> 
+            <div class="customize-theme">
+                <div class="card">
+                    <h2>Customize your view</h2>
+                    <p class="text-muted">Manage your font size,color and background.</p>
+            
+                    <!--------------------FONT SIZES-------------->
+                    <div class="font-size">
+                        <h4>Font Size</h4>
+                        <div>
+                            <h6>Aa</h6>
+                            <div class="choose-size">
+                                <span class="font-size-1"></span>
+                                <span class="font-size-2"></span>
+                                <span class="font-size-3"></span>
+                                <span class="font-size-4"></span>
+                                <span class="font-size-5"></span>
+                            </div>
+                            <h3>Aa</h3>
+                        </div>
+                    </div>
+            
+                    <!-------------------PRIMARY COLORS-------------->
+                    <div class="color">
+                        <h4>Color</h4>
+                        <div class="choose-color">
+                            <span class="color-1 active"></span>
+                            <span class="color-2 "></span>
+                            <span class="color-3"></span>
+                            <span class="color-4"></span>
+                            <span class="color-5"></span>
+                        </div>
+                     </div>
+            
+                     <!--------------------BACKGROUND COLOR------------------>
+                     <div class="background">
+                        <h4>Background</h4>
+                        <div class="choose-bg active">
+                            <div class="bg-1">
+                                <span></span>
+                                <h5 for="bg-1">Light</h5>
+                            </div>
+                            <div class="bg-2">
+                                <span></span>
+                                <h5>Dim</h5>
+                            </div>
+                            <div class="bg-3">
+                                <span></span>
+                                <h5 for="bg-3">Light Out</h5>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+               </div>
 {% endblock content %}
