--- a/Social/userauths/templates/userauths/profile.html
+++ b/Social/userauths/templates/userauths/profile.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%} {% load static %} {% block content %}
+{%extends 'layouts/b.html'%} {% load static %} {% block content %}
 <!DOCTYPE html>
     <!-- Font Awesome -->
     <link
