--- a/Social/post/templates/post/post.html
+++ b/Social/post/templates/post/post.html
@@ -7,7 +7,7 @@
                      <img src="{{post.user.profile.image.url}}"/>
                 </div>
                 <div class="ingo">
-                    <h3>{{post.user.username}}</h3>
+                    <h3>{{post.user.profile.name}}</h3>
                 </a>
                     <small>{{post.posted|date:"d M Y"}}</small>
                 </div>
