--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -8,7 +8,7 @@
                 <!------------------End of Stories---------------------->
                 <form class="create-post">
                     <div class="profile-photo">
-                        <img src="{{request.user.profile.image.url}}" >
+                        <img src="{{request.user.profile.avatar}}" >
                     </div>
                     <input type="text" placeholder="What's on your mind {{request.user.profile.user.username }}?" id="create-post">
                     <input type="submit" value="Post" class="btn btn-primary">
