--- a/Social/templates/layouts/a.html
+++ b/Social/templates/layouts/a.html
@@ -3,7 +3,7 @@
 <div class="container">
      <!--*****************Left*************************-->
      <div class="left">
-        <a  class="profile" href = "{% url 'profile' request.user.profile.user %}">
+        <a  class="profile" href = "{% url 'profile'  %}">
             <div class="profile-photo">
                     <img src="{{request.user.profile.avatar}}"/>
             </div>
