--- a/Social/templates/snippets/header.html
+++ b/Social/templates/snippets/header.html
@@ -19,7 +19,7 @@
                 Log Out 
             </a>
                 <div class="profile-photo" >
-                    <a href = "{% url 'profile' request.user.profile.user %}">
+                    <a href = "{% url 'profile'  %}">
                     <img src="{{request.user.profile.avatar}}"/>
                     </a>
                 </div>
