--- a/Social/templates/snippets/sidebar.html
+++ b/Social/templates/snippets/sidebar.html
@@ -67,7 +67,7 @@
     <a  class="menu-item " id="messages-notification">
         <span><i class="uil uil-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3>
     </a>
-    <a  class="menu-item " href="{% url 'profilefavourite' request.user.profile.user %}">
+    <a  class="menu-item " href="{% url 'profilefavourite'  %}">
         <span><i class="uil uil-bookmark"></i></span><h3>Bookmarks</h3>
     </a>
     <a  class="menu-item " id="theme">
