--- a/Social/comment/templates/comment/reply.html
+++ b/Social/comment/templates/comment/reply.html
@@ -1,7 +1,7 @@
 <div class="message">
     <div class="profile-photo">
         {% if reply.author %}
-        <a href = "{% url 'profile' reply.author.profile.user %}">
+        <a href = "{% url 'userprofile' reply.author.profile.user %}">
             <img src="{{ reply.author.profile.avatar}}" alt="{{ reply.author.profile.name }}" />
         {% else %}
             <span class="text-gray-500">no author</span>
