Synced emails between Profile and User tables; Added user onboarding page

--- a/Social/templates/snippets/header.html
+++ b/Social/templates/snippets/header.html
@@ -19,10 +19,17 @@
                 Log Out 
             </a>
                 <div class="profile-photo" >
-                    <a href = "{% url 'profile'  %}">
-                    <img src="{{request.user.profile.avatar}}"/>
-                    </a>
+                    {%if request.user.profile.avatar%}
+                        <a href = "{% url 'profile'  %}">
+                        <img src="{{request.user.profile.avatar}}"/>
+                        </a>
+                    {%else%}
+                        <a href = "{% url 'profile'  %}">
+                        <img src="{% static '/images/avatar_default.png' %}"/>
+                        </a>
+                    {%endif%}
                 </div>
+
         {%endif%}
         </div>
     </div>
