--- a/Social/userauths/templates/userauths/profile_onboarding.html
+++ b/Social/userauths/templates/userauths/profile_onboarding.html
@@ -6,15 +6,22 @@
           <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
           <div class="logo">
-            <h3 style="padding: 20px; font-size: 20px;">Edit Profile</h3>
+            <h3 style="padding: 20px; font-size: 20px;">Complete your Profile</h3>
           </div>
           <div class="profile-photo" style="width: 7rem;" >
             <img id="avatar" src="{{request.user.profile.avatar}}"/>  
         </div>
+        {%if request.user.profile.first_name == None  and request.user.profile.last_name == None  %}
+        <div style="display: flex; align-items: center;">
+          <h4 id="firstname" style="margin-right: 10px;">@{{ request.user.profile.user.username }}</h4>
+            <h4 id="lastname"></h4>  
+      </div>     
+        {%else%}  
         <div style="display: flex; align-items: center;">
           <h4 id="firstname" style="margin-right: 10px;">{{ request.user.profile.first_name }}</h4>
           <h4 id="lastname">{{ request.user.profile.last_name }}</h4>
-      </div>          
+      </div>    
+      {%endif%}
           {{form.image}} <br>
           {{form.first_name}} <br>
           {{form.last_name}} <br>
@@ -23,9 +30,8 @@
           {{form.email}}<br>
           {{form.url}} <br>
           <button class="form-btn" type="submit">Update Profile</button>
-          <a class="form-btn" href="{{ request.META.HTTP_REFERER }}">Cancel</a>
+          <a class="form-btn" href="{{ request.META.HTTP_REFERER }}">Skip</a>
         </form>
-        <a class="form-btn" href="{% url 'deleteprofile' %}">Delete Profile</a>
     </div> 
 
     <script>
