Added functionality to edit post captions

--- a/Social/post/templates/post/post.html
+++ b/Social/post/templates/post/post.html
@@ -39,6 +39,9 @@
       <a href="{%url 'delete-post' post.id%} ">
       <span><i class="uil uil-trash-alt"></i></span> 
       </a>
+      <a href="{%url 'edit-post' post.id%} ">
+        <span><i class="uil uil-edit-alt"></i></span> 
+        </a>
       {%endif%}
 
     </div>
