--- a/Social/static/signup.css
+++ b/Social/static/signup.css
@@ -42,16 +42,16 @@ body{
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .container  span{
     font-size: 12px;
 }
 
-.container .box a{
+.container .box i{
     color: blue;
-    font-size: 0.9rem;
+    font-size: 2.1rem;
     text-decoration: none;
     margin: 15px 0 10px;
 }
@@ -122,9 +122,9 @@ body{
 
 
 
-.social-icons{
+/* .social-icons{
     margin: 20px 0;
-}
+} */
 
 .social-icons a{
     border: 1px solid #ccc;
